--- a/src/components/product/ProductCard.module.css
+++ b/src/components/product/ProductCard.module.css
@@ -7,6 +7,8 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    text-decoration: none;
+    color: inherit;
 }
 
 .card:hover {
